[gd_scene load_steps=2 format=3 uid="uid://cbtcdlobscc5s"]

[ext_resource type="Script" uid="uid://cs7ls5xcp66ma" path="res://menus/settings_menu.gd" id="1_83qjl"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_83qjl")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -33.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 700
theme_override_constants/margin_right = 700

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 12

[node name="VSyncContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VSyncLabel" type="Label" parent="MarginContainer/VBoxContainer/VSyncContainer"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_font_sizes/font_size = 20
text = "VSync"

[node name="VSyncCheckButton" type="CheckButton" parent="MarginContainer/VBoxContainer/VSyncContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_font_sizes/font_size = 20

[node name="MSAAContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MSAALabel" type="Label" parent="MarginContainer/VBoxContainer/MSAAContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "MSAA"

[node name="MSAAOptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/MSAAContainer"]
layout_mode = 2
size_flags_horizontal = 8
selected = 0
item_count = 4
popup/item_0/text = "Disabled"
popup/item_0/id = 0
popup/item_1/text = "2x"
popup/item_1/id = 1
popup/item_2/text = "4x"
popup/item_2/id = 2
popup/item_3/text = "8x"
popup/item_3/id = 3

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Back
"

[connection signal="toggled" from="MarginContainer/VBoxContainer/VSyncContainer/VSyncCheckButton" to="." method="_on_v_sync_check_button_toggled"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/MSAAContainer/MSAAOptionButton" to="." method="_on_msaa_option_button_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
